--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -3767,14 +3767,14 @@ Claim code </th> </tr> </thead>
                                  <span class="fas  fa-li"><span class="fas fa-plus"></span> <span class="wb-inv">plus</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5"> $1,701.03 is Joseph's total provincial income tax you have to withhold </span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5"> $1,527.90 is Joseph's total provincial income tax you have to withhold </span>
                                  <div class="mrgn-tp-md"></div>
                               </li>
 
                               <li><span class="fas  fa-li"><span class="fas fa-equals"></span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                  <span class="fas fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                 </span> <span class="mrgn-tp-0 text-muted h5"> $3,237.97 is Joseph's total annual amount you have to withhold and remit (federal and provincial income tax) 
+                                 </span> <span class="mrgn-tp-0 text-muted h5"> $3,064.84 is Joseph's total annual amount you have to withhold and remit (federal and provincial income tax) 
                                  </span></span> 
                               </li></ul>
 </details>	
@@ -3813,20 +3813,20 @@ Claim code </th> </tr> </thead>
                               <li><span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                 </span><span class="mrgn-tp-0 text-muted h5"> $3,882.97 is Joseph's annual income tax to be deducted, including the lump-sum payment (step 5a)</span> 
+                                 </span><span class="mrgn-tp-0 text-muted h5"> $3,709.87 is Joseph's annual income tax to be deducted, including the lump-sum payment (step 5a)</span> 
                               </li>
 	
 	<li class="brdr-bttm">
                                  <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5"> $3,237.97 is Joseph's annual income tax to be deducted, not including the lump-sum payment (step 5b)</span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5"> $3,064.84 is Joseph's annual income tax to be deducted, not including the lump-sum payment (step 5b)</span>
                                  <div class="mrgn-tp-md"></div>
                               </li>
 		<li><span class="fas  fa-li"><span class="fas fa-equals"></span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                  <span class="fas fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                 </span> <span class="mrgn-tp-0 text-muted h5"> $645 is Joseph's total income tax to be deducted from the lump-sum payment if he requests it
+                                 </span> <span class="mrgn-tp-0 text-muted h5"> $645.03 is Joseph's total income tax to be deducted from the lump-sum payment if he requests it
                                  </span></span> 
                               </li>
 
@@ -4048,7 +4048,7 @@ Claim code </th> </tr> </thead>
  <details class="mrgn-bttm-md">
                               <summary>Calculation example</summary>
 
-<p>Joseph receives a weekly salary of $500 and $50 in taxable benefits received in cash in 2023. His province of employment is Manitoba. He claimed only the basic personal amount on his federal TD1 form. All of his earnings were pensionable and insurable.  </p>
+<p>Joseph receives a weekly salary of $500 and $50 in taxable benefits received in cash in 2023. His province of employment is New Brunswick. He claimed only the basic personal amount on his federal TD1 form. All of his earnings were pensionable and insurable.  </p>
 
 	 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                               <li><span class="fa-stack text-success">
@@ -4333,7 +4333,7 @@ Claim code </th> </tr> </thead>
                       </ul>
 <details class="mrgn-bttm-md">
                               <summary>Calculation example</summary>
-<p>Joseph receives a weekly salary of $500 and $50 in taxable benefits received in cash in 2023. His province of employment is Manitoba. He claimed only the basic personal amount on his provincial TD1MB form. All of his earnings were pensionable and insurable. </p>
+<p>Joseph receives a weekly salary of $500 and $50 in taxable benefits received in cash in 2023. His province of employment is New Brunswick. He claimed only the basic personal amount on his provincial TD1NB form. All of his earnings were pensionable and insurable. </p>
 	<ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                               <li><span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
@@ -4372,10 +4372,10 @@ Claim code </th> </tr> </thead>
                                  <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <i class="fas fa-dollar-sign fa-stack-1x"></i>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5">$1,356.88 ($12,563.72 X 10.80%) is Joseph's total provincial tax credits multiplied by the lowest Manitoba tax rate for the year:
+                                 </span>  <span class="mrgn-tp-0 text-muted h5">$1,530.01 ($14,166.72 X 10.80%) is Joseph's total provincial tax credits multiplied by the lowest New Brunswick tax rate for the year:
 				 <ul class="mrgn-lft-lg lst-spcd mrgn-bttm-md">
 
-				<li>$10,855 is Joseph's total of provincial tax credit amounts reported on his provincial or territorial Form TD1</li>
+				<li>$12,458 is Joseph's total of provincial tax credit amounts reported on his provincial or territorial Form TD1</li>
 				<li>$1,242.28 ($23.89 X 52 pay periods) is Joseph's base CPP contributions for the pay period multiplied by the number of pay periods in the year, to the year’s maximum annual Joseph's contribution</li>
 				<li>$466.44 ($8.97 X 52 pay periods) is Joseph's EI premiums for the pay period multiplied by the number of pay periods in the year, up to the year’s maximum annual Joseph's premiums </li>
 				
@@ -4386,7 +4386,7 @@ Claim code </th> </tr> </thead>
                               <li><span class="fas  fa-li"><span class="fas fa-equals"></span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                  <span class="fas fa-circle fa-stack-2x"></span>
                                  <i class="fas fa-dollar-sign fa-stack-1x fa-inverse"></i>
-                                 </span> <span class="mrgn-tp-0 text-muted h5"> $1,701.03 is Joseph's total provincial tax payable for the year 
+                                 </span> <span class="mrgn-tp-0 text-muted h5"> $1,527.90 is Joseph's total provincial tax payable for the year 
                                  </span></span> 
                               </li>
    
@@ -4774,7 +4774,7 @@ Claim code </th> </tr> </thead>
 
 <details class="mrgn-bttm-md">
                               <summary>Calculation example</summary>
-<p>Joseph receives a weekly salary of $500 and $50 in taxable benefits received in cash in 2023. His province of employment is Manitoba. In step 1, he estimated his annual taxable income to be $28,314. In steps 2 and 3, Joseph calculated his total federal income tax payable and total provincial income tax payable from that amount.</p>
+<p>Joseph receives a weekly salary of $500 and $50 in taxable benefits received in cash in 2023. His province of employment is New Brunswick. In step 1, he estimated his annual taxable income to be $28,314. In steps 2 and 3, Joseph calculated his total federal income tax payable and total provincial income tax payable from that amount.</p>
 	<ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                               <li><span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
@@ -4786,14 +4786,14 @@ Claim code </th> </tr> </thead>
                                  <span class="fas  fa-li"><span class="fas fa-plus"></span> <span class="wb-inv">plus</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5"> $1,701.03 is Joseph's total provincial income tax you have to withhold (step 3)</span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5"> $1,527.90 is Joseph's total provincial income tax you have to withhold (step 3)</span>
                                  <div class="mrgn-tp-md"></div>
                               </li>
 
                               <li><span class="fas  fa-li"><span class="fas fa-equals"></span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                  <span class="fas fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                 </span> <span class="mrgn-tp-0 text-muted h5"> $3,237.97 is Joseph's total annual amount you have to withhold and remit (federal and provincial income tax) 
+                                 </span> <span class="mrgn-tp-0 text-muted h5"> $3,064.84 is Joseph's total annual amount you have to withhold and remit (federal and provincial income tax) 
                                  </span></span> 
                               </li>
 
@@ -4808,7 +4808,7 @@ Claim code </th> </tr> </thead>
 		 <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                     <span class="fas fa-circle fa-stack-2x"></span>
                                     <i class="fas fa-dollar-sign fa-stack-1x fa-inverse"></i>
-                                    </span> <span class="mrgn-tp-0 text-muted h5"> $62.27 is Joseph's total amount you have to withhold for the pay period (federal and provincial income tax) 
+                                    </span> <span class="mrgn-tp-0 text-muted h5"> $58.94 is Joseph's total amount you have to withhold for the pay period (federal and provincial income tax) 
                                     </span></span></li>
 
 		<li class="brdr-bttm">
@@ -4821,7 +4821,7 @@ Claim code </th> </tr> </thead>
  			 <li><span class="fas  fa-li"><span class="fas fa-equals"></span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                  <span class="fas fa-circle fa-stack-2x"></span>
                                  <i class="fas fa-dollar-sign fa-stack-1x fa-inverse"></i>
-                                 </span> <span class="mrgn-tp-0 text-muted h5"> $62.27 is Joseph’s total amount you have to withhold and remit for the pay period
+                                 </span> <span class="mrgn-tp-0 text-muted h5"> $58.94 is Joseph’s total amount you have to withhold and remit for the pay period
                                  </span></span> 
                               </li> 
 
