--- a/payroll/calculate/benefit/parking.html
+++ b/payroll/calculate/benefit/parking.html
@@ -309,12 +309,11 @@
 <p>Generally, the FMV of a parking spot is the price that could be reasonably charged for the use of that spot in an open market (that is, the market price for a similar spot in the surrounding area). Normally, the cost to the employer is not a factor in determining the value of the benefit. For example, where the employer owns the lot, the value would be based on the FMV, not the employer's cost. </p>
 <h3>When to re-evaluate the FMV</h3>
 <p>Generally, you should re-evaluate the FMV of the parking benefit when there is a significant change to the market for parking in the area that may impact the FMV.</p>
-<p>The CRA generally suggests you research the value of the parking based on the following factors:</p>
+<p>The CRA suggests you research the value of the parking based on the following:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-  <li class="cnjnctn-col">limited to the same area as the parking provided</li>
-  <li class="cnjnctn-col">to comparable parking spots to the one being provided to your employee</li>
+  <li class="cnjnctn-col">The rates charged to the public for a similar parking space in the same area as the parking being provided to your employee</li>
+  <li class="cnjnctn-col">The same conditions of use as the parking being provided to your employee</li>
 </ul>
-<p>You must consider <strong>all of the facts</strong> relevant to your employee's situation to determine the best method of re-evaluating the FMV of the parking benefit.</p>
 <p>This determination must be done based on a review of the facts in each specific situation.</p>
 		</div>
 </details>
