--- a/fhsa/open.html
+++ b/fhsa/open.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>ZZZ - [ABC] - Canada.ca</title>
+         <title>Opening and closing your FHSAs - First Home Savings Account (FHSA) - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -44,10 +44,10 @@
                 title: "Taxes",
                 href: "https://www.canada.ca/en/services/taxes.html"
               },{
-                title: "Tax credits and benefits for individuals",
-                href: "https://www.canada.ca/en/services/taxes/child-and-family-benefits.html"
+                title: "Savings and pension plans",
+                href: "https://www.canada.ca/en/services/taxes/savings-and-pension-plans.html"
               },{
-                title: "[ABC]",
+                title: "First Home Savings Account (FHSA)",
                 href: "index.html"
               }
               ],
@@ -57,19 +57,9 @@
             });
          </script>
          <main role="main" property="mainContentOfPage" class="container">
-            <nav class="gc-subway provisional">
-               <h1>[ABC]</h1>
-               <ul>
-                  <li><a href="#" class="active">[Page 1]</a></li>
-                  <li><a href="#">[Page 2]</a></li>
-                  <li><a href="#">[Page 3]</a></li>
-                  <li><a href="#">[Page 4]</a></li>
-                  <li><a href="#">[Page 5]</a></li>
-                  <li><a href="#">[Page 6]</a></li>
-               </ul>
-            </nav>
-            <h1 property="name" id="wb-cont" class="gc-thickline">ZZZ</h1>
-            <p>Page content. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
+          
+            <h1 property="name" id="wb-cont" class="gc-thickline">Opening and closing your FHSAs</h1>
+            <p>Find out who is eligible to open a first home savings account (FHSA), how to open an account, and when to close your accounts.</p>
             <h2 class="h3">On this page</h2>
             <ul>
                <li><a href="#h-1">Heading A</a></li>
