--- a/fhsa/open.html
+++ b/fhsa/open.html
@@ -62,13 +62,15 @@
             <p>Find out who is eligible to open a first home savings account (FHSA), how to open an account, and when to close your accounts.</p>
             <h2 class="h3">On this page</h2>
             <ul>
-               <li><a href="#h-1">Heading A</a></li>
-               <li><a href="#h-2">Heading B</a></li>
-               <li><a href="#h-3">Heading C</a></li>
-               <li><a href="#h-4">Heading D</a></li>
+               <li><a href="#h-1">Who can open an FHSA</a></li>
+               <li><a href="#h-2">How to open an FHSA</a></li>
+               <li><a href="#h-3">When to close an FHSA</a></li>
             </ul>
-            <h2 id="h-1">Heading A</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
+            <h2 id="h-1">Who can open an FHSA</h2>
+            <p>To open an FHSA, you must be a qualifying individual.</p>
+            <p>You are a qualifying individual if your meet <strong>all</strong> of the following requirements at the time the account is opened:</p>
+
+            
             <h2 id="h-2">Heading B</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
             <h2 id="h-3">Heading C</h2>
