--- a/fhsa/open.html
+++ b/fhsa/open.html
@@ -69,7 +69,13 @@
             <h2 id="h-1">Who can open an FHSA</h2>
             <p>To open an FHSA, you must be a qualifying individual.</p>
             <p>You are a qualifying individual if your meet <strong>all</strong> of the following requirements at the time the account is opened:</p>
-
+ <ul class="fa-ul">
+	<li><span class="fas fa-check text-success fa-li"></span> 
+            
+               18 years of age or older</li>
+    <li><span class="fas fa-check text-success fa-li"></span>a resident of Canada</li>
+    <li><span class="fas fa-check text-success fa-li"></span>a first-time home buyer</li>
+ </ul>
             
             <h2 id="h-2">Heading B</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
