--- a/subway/uht/index.html
+++ b/subway/uht/index.html
@@ -961,7 +961,7 @@ input[type='radio'] {
             
 
                 
-
+<p>[Rescue link to vacant tax?]</p>
 
                 <section>
                     <nav aria-label="Section menu">
@@ -976,7 +976,7 @@ input[type='radio'] {
 				<li><a href="downloadcomplete.html">Download and complete your return</a><br>
                                 [Details]
                             </li>
-                            <li><a href="filereturn.html">File the return</a><br>
+                            <li><a href="filereturn.html">Send the return</a><br>
                                 [Details]
                             </li>
                             <li><a href="paytax.html">Pay the tax</a><br>
