--- a/subway/uht/filereturn.html
+++ b/subway/uht/filereturn.html
@@ -906,7 +906,10 @@ margin-left: 38px;
       
           <ul class="list-unstyled">
             <li><a href="https://canada.ca/en/services/taxes/excise-taxes-duties-and-levies/underused-housing-tax/underused-housing-tax-technical-information.html">Technical information<span class="wb-inv"> for underused housing tax</span></a>: publications, forms and other information</li>
-          </ul>
+<p>[Link to tax notices landing page instead]</p>  
+		  <p>[Link to UHT Act]</p>
+
+</ul>
    
 
            
