--- a/subway/uht/filereturn.html
+++ b/subway/uht/filereturn.html
@@ -903,7 +903,7 @@ margin-left: 38px;
 		  <p>Every affected owner of a residential property must keep records to enable the determination of their obligations and liabilities under the UHTA. Generally, you must keep the records for six years from the end of the year to which they relate.</p>
     
           <h2>Resources</h2>
-      
+      <p><a href="https://www.canada.ca/en/services/taxes/excise-taxes-duties-and-levies/underused-housing-tax/underused-housing-tax-technical-information.html">Technical information</a></p>
           <ul class="list-unstyled">
             <li><a href="https://canada.ca/en/services/taxes/excise-taxes-duties-and-levies/underused-housing-tax/underused-housing-tax-technical-information.html">Technical information<span class="wb-inv"> for underused housing tax</span></a>: publications, forms and other information</li>
 <p>[Link to tax notices landing page instead]</p>  
