res prop ex/hide

--- a/subway/uht/whomust.html
+++ b/subway/uht/whomust.html
@@ -808,7 +808,11 @@ margin-left: 38px;
 		 
 		 <details>
 			 <summary>What is a residential property</summary>
-			 <p>Content</p>
+			 <p>Generally, residential property is defined as property that is either of the following:</p>
+<ul>
+	<li>A detached house or similar building that contains a maximum of 3 dwelling units, included the related land</li>
+	<li>A semi-detached house, rowhouse unit, or condominium, included the related land</li>
+	<p>For more detailed infomration, refer to <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681148">residential property</a></p>
 		 </details>
 		 
 			<details>
