--- a/subway/uht/filereturn.html
+++ b/subway/uht/filereturn.html
@@ -904,9 +904,7 @@ margin-left: 38px;
     
           <h2>Resources</h2>
       <p><a href="https://www.canada.ca/en/services/taxes/excise-taxes-duties-and-levies/underused-housing-tax/underused-housing-tax-technical-information.html">Technical information</a></p>
-          <ul class="list-unstyled">
-            <li><a href="https://canada.ca/en/services/taxes/excise-taxes-duties-and-levies/underused-housing-tax/underused-housing-tax-technical-information.html">Technical information<span class="wb-inv"> for underused housing tax</span></a>: publications, forms and other information</li>
-<p>[Link to tax notices landing page instead]</p>  
+          <p>[Link to tax notices landing page instead of tech info]</p>  
 		  <p>[Link to UHT Act]</p>
 
 </ul>
