--- a/subway/uht/whomust.html
+++ b/subway/uht/whomust.html
@@ -812,12 +812,23 @@ margin-left: 38px;
 <ul>
 	<li>A detached house or similar building that contains a maximum of 3 dwelling units, included the related land</li>
 	<li>A semi-detached house, rowhouse unit, or condominium, included the related land</li>
-	<p>For more detailed infomration, refer to <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681148">residential property</a></p>
+	</ul>
+	<p>For more detailed infomration, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681148">residential property</a></p>
+			 
 		 </details>
 		 
 			<details>
 			 <summary>Who is considered an owner</summary>
-			 <p>Content</p>
+			 <p>You are an owner of a residential property if any of the following apply:</p>
+				<ul>
+					<li>you are identified as an owner of the property in the land registration system where the property is located</li>
+					<li>you are considered an owner of the property based on such a land registration system</li>
+					<li>you are a life tenant under a life estate in the property</li>
+					<li>you are a life lease holder of the property</li>
+					<li>you are a lessee that has continuous possession of the land on which the property is situated under a long-term lease</li>
+					
+				</ul>
+				<p>For more detailed infomration, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681153">owner of residential property</a></p>
 		 </details>	
 		 <br>
 				<p>If you are not an <strong>excluded owner</strong> (not subject to the tax) we refer to you as an <strong>affected owner</strong> (subject to the tax).</p>
