--- a/fhsa/open.html
+++ b/fhsa/open.html
@@ -60,6 +60,13 @@
           
             <h1 property="name" id="wb-cont" class="gc-thickline">Opening and closing your FHSAs</h1>
             <p>Find out who is eligible to open a first home savings account (FHSA), how to open an account, and when to close your accounts.</p>
+		 <div class="alert alert-success">
+	<p>You can open an FHSA starting April 1, 2023.</p>
+</div>
+
+	
+
+</div>
             <h2 class="h3">On this page</h2>
             <ul>
                <li><a href="#h-1">Who can open an FHSA</a></li>
