--- a/subway/uht/calculate.html
+++ b/subway/uht/calculate.html
@@ -795,10 +795,21 @@ margin-left: 38px;
             
 		   <h2 id="h_3">Calculate what you owe</h2>
       <p>If your ownership of a residential property <strong>does not qualify for an exemption</strong> from the Underused Housing Tax for a calendar year, you must calculate what you owe for the calendar year.</p>
-      <div class="row mrgn-bttm-lg">
-		  <div class="col-sm-6 col-md-5">
-		<p>The tax rate of the Underused Housing Tax is 1%. To calculate what you owe, multiply the value of the residential property by the 1% tax rate. Then multiply that result by your <strong>ownership percentage</strong> of the property.</p></div>
-		  <div class="col-sm-6 col-md-7">
+   
+	<p>The tax rate of the Underused Housing Tax is 1%. To calculate what you owe, multiply the value of the residential property by the 1% tax rate. Then multiply that result by your <strong>ownership percentage</strong> of the property.</p></div>
+		 
+		 <details>
+			 <summary>What is ownership percentage</summary>
+			 <p>If you are an affected owner of a residential property on December 31 of a calendar year, your ownership percentage of the residential property for the calendar year is determined as follows:</p>
+<ul>
+	<li>if you are the only owner of the residential property, your ownership percentage of the residential property is 100%</li>
+	<li>if you are one of several owners of the residential property, your ownership percentage of the residential property is either of the following:</li>
+	<ul><li>the percentage of your ownership as indicated in the land registration system</li></ul>
+	<ul><li>100% divided by the number of owners, if no percentage is indicated in the land registration system</li></ul>
+</ul>
+		 </details>
+		 
+		 <div class="col-sm-6 col-md-7">
 			  	  <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
 	<li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span><span class="wb-inv"></span></span> <span class="fa-stack text-success mrgn-bttm-sm"><span class="far fa-circle fa-stack-2x"></span><span class="fas fa-dollar-sign fa-stack-1x"></span></span><span class="mrgn-tp-0 text-muted h5">Value of the property</span></li>		  
 			  
