--- a/subway/uht/calculate.html
+++ b/subway/uht/calculate.html
@@ -837,7 +837,7 @@ margin-left: 38px;
 </ul>
 </details>
 	
-      <h3>Determine the value of the property</h3>
+      <h3>Determine the value of the residential property</h3>
       <p>There are two ways to determine the value of a residential property. The general rule is to use its taxable value. If you want to use its fair market value instead, you must file an election with the Agency.</p>
       <p>An affected owner electing to use the fair market value of a residential property to calculate Underused Housing Tax owing must get an appraisal of the property. The appraisal report must be prepared by an accredited, professional real estate appraiser operating at arm’s length from the owner. The intended use of the appraisal report must be to assist in the administration of the Underused Housing Tax Act.</p>
      
