--- a/fhsa/open.html
+++ b/fhsa/open.html
@@ -194,7 +194,7 @@
     
 
     
-        <h2 id="h_3">When to close an FHSA</h2>
+        <h2 id="h-3">When to close an FHSA</h2>
 <p>Your maximum participation period begins when you open your first FHSA and ends on <span class="nowrap">December 31</span> of the year in which the <strong>earliest</strong> of the following events occur:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col">the 15th anniversary of opening your first FHSA</li>
