--- a/fhsa/participating.html
+++ b/fhsa/participating.html
@@ -314,6 +314,9 @@
             </li>
         
     </ul>
+        <h2 id="h-4">Where to find your FHSA participation room</h2>
+	<p>After you have opened your first FHSA, you can find the details about your FHSA participation room on your notice of assessment or reassessment. <span class="label label-info">More information about these notices will be available at a later date.</span></p>
+
 
 
 </div>
