--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -155,7 +155,7 @@
                <li><a href="#h-1">What is a T4 slip</a> </li>
                <li><a href="#h-2">When to issue</a> </li>
                <li>
-                  <a href="#h-3">Before you fill out</a>
+                  <a href="#h-3">What to report</a>
                  
                </li>
                <li>
