--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -159,7 +159,7 @@
                  
                </li>
                <li>
-                  <a href="#h-4">How to fill out</a>
+                  <a href="#h-4">What to report</a>
                   <ul>
                      <li><a href="#h-4-1">Identification and pre-numbered boxes</a> </li>
                      <li><a href="#h-4-2">"Other information" section</a>
@@ -233,7 +233,7 @@
 </dl>
 </div>
 </details>
-            <h2 id="h-3">Before you fill out</h2>
+            <h2 id="h-3">What to report</h2>
     <details>  <summary >What to report and not report on a T4A</summary>                  
           
             <div class="row">
