--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -199,7 +199,7 @@
                   <p id="h-2-1">If you provide <strong>current or former </strong>employees with taxable <strong>group term life insurance </strong>benefits, you <strong>always </strong>have to issue a T4 slip, even if the total of all remuneration paid in the calendar year is $500 of less. </p>
                </dd>
             </dl></details>
-            <h2 id="h-3">Before you fill out</h2>
+            <h2 id="h-3">What to report</h2>
 <details>  <summary >What to report and not report on a T4</summary> 
           
             <div class="row">
