--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -809,7 +809,7 @@
             </details>
 </li>
 		<li class="box-num">
-	     <details><summary id="bx_45"><span class="label label-warning">T4 slips filed on or after calendar year 2024</span> Box 45 – Employer-offered dental benefits (EODB)</summary>
+	     <details><summary id="bx_45"><span class="label label-warning">Deductions made on or after January 1, 2024</span> Box 45 – Employer-offered dental benefits (EODB)</summary>
 <p>For T4 slips filed on or after calendar year 2024, if you <strong>provided access to any dental care insurance or for coverage of dental services of any kind</strong> to an employee, enter the appropriate code from the following list to indicate the level of access to services you provided:</p>
 
     
@@ -1024,7 +1024,7 @@
             </details>
 </li>
 		<li class="box-num">
-<details><summary id="bx_16a"><span class="label label-warning">T4 slips filed on or after calendar year 2024</span> Boxes 16A – Employee's second CPP (CPP2) contributions</summary>	
+<details><summary id="bx_16a"><span class="label label-warning">Deductions made on or after January 1, 2024</span> Boxes 16A – Employee's second CPP (CPP2) contributions</summary>	
 <p>For T4 slips filed on or after calendar year 2024, you will need to report the amount of CPP2 contributions you deducted from your employee in box 16A if box 10 shows their province or territory of employment is other than Quebec.</p>
 <p>The CRA will provide more instructions by the end of 2023. </p>
 </details>	    	    
@@ -1047,7 +1047,7 @@
             </details>  
     </li>
 		<li class="box-num">         
- <details><summary id="bx_17a"><span class="label label-warning">T4 slips filed on or after calendar year 2024</span> Boxes 17A – Employee's second QPP (QPP2) contributions</summary>
+ <details><summary id="bx_17a"><span class="label label-warning">Deductions made on or after January 1, 2024</span> Boxes 17A – Employee's second QPP (QPP2) contributions</summary>
 <p>For T4 slips filed on or after calendar year 2024, you will need to report the amount of QPP2 contributions you deducted from your employee in box 17A if box 10 shows their province of employment is Quebec.</p>
 <p>The CRA will provide more instructions by the end of 2023. </p>	
 </details>           
