--- a/payroll/file/t4arcasum.html
+++ b/payroll/file/t4arcasum.html
@@ -152,7 +152,7 @@
 <ul>
 
 	       <li><a href="#h-1">What is a T4A-RCA summary</a> </li>
-               <li><a href="#h-3">Before you fill out</a></li>
+               <li><a href="#h-3">What to report</a></li>
                <li><a href="#h-4">How to fill out</a></li>
             </ul>
 
@@ -180,7 +180,7 @@
 		 </div></div>
 
 
-<h2 id="h-3">Before you fill out</h2>
+<h2 id="h-3">What to report</h2>
   <ul class="fa-ul">
    <li><span class="fas fa-check text-success fa-li"></span>Report all amounts in Canadian dollars, even if they were paid in another currency. Learn more about the average exchange rates: <a href="http://www.bankofcanada.ca/rates/exchange/">Exchange rates</a> </li>
   <li><span class="fas fa-check text-success fa-li"></span> Fill out a separate T4A-RCA summary for each of your RCA Trust payroll accounts. <strong>The totals you report on your T4A-RCA summary have to agree with the totals of all amounts you reported on your T4A-RCA slips</strong> for that payroll account</li>
@@ -210,7 +210,7 @@
 </details>
 
 <details><summary id="acc">Payroll account number</summary>
-<p>Enter the <span class="nowrap">15-character</span> <a href="#account" aria-controls="centred-popup" class="wb-lbx" role="button">payroll account&nbsp;<span class="far fa-question-circle"></span></a> (for example, 123456789RP0001) of the custodian or the person who bought an interest in the RCA. </p>
+<p>Enter the <span class="nowrap">15-character</span> <a href="#account" aria-controls="centred-popup" class="wb-lbx" role="button">payroll account number&nbsp;<span class="far fa-question-circle"></span></a> (for example, 123456789RP0001) of the custodian or the person who bought an interest in the RCA. </p>
 </details>
 
 <details><summary id="cor">Corresponding custodian trust account number</summary>
@@ -219,7 +219,7 @@
 
 <details><summary id="address">Name and address of custodian, or person who bought an interest in the RCA</summary>
 <p>Enter the full name and complete address of the custodian, or the person who bought an interest in the RCA, as the case may be.</p>
-<p>The custodian's name and payroll account number must be the same as your PD7A.</p>
+<p>The custodian's name and payroll account number must be the same as on the PD7A.</p>
  <p>Learn more: <a href="/cra-arc/payroll/file/receiving.html">Receiving payroll correspondence from us</a>  </p>
 </details>
 
@@ -261,7 +261,7 @@
 </details>
 
 <details><summary id="82">Line 82 &ndash; Remittances </summary>
-  <p>  Report the total amount of payroll deductions and contributions you remitted to the CRA for your payroll account. You can get this amount from your most recent PD7A.</p>
+  <p>  Report the total amount of income tax deductions you remitted to the CRA for your payroll account. You can get this amount from your most recent PD7A.</p>
     	
  <p>Learn more: <a href="/cra-arc/payroll/file/receiving.html">Receiving payroll correspondence from us</a>  </p>
 </details>
@@ -274,7 +274,7 @@
  <li class="cnjnctn-col">the amount is <strong>positive</strong>, there is a balance due. Report the result on line 86.</li>
  <li class="cnjnctn-col">there is <strong>no difference</strong> between the total deductions you reported and the amount you remitted for the year, leave lines 84 and 86 blank.</li>
 </ul>
-<p>Generally, the CRA do not charge or refund a difference of $2 or less.</p>
+<p>Generally, the CRA does not charge or refund a difference of $2 or less.</p>
 </details>
 
 <details><summary id="84">Line 84 &ndash; Overpayment </summary>
