--- a/payroll/file/t4arcaslip.html
+++ b/payroll/file/t4arcaslip.html
@@ -149,7 +149,7 @@
             <ul>
 			 <li><a href="#h-1">What is a T4A-RCA slip</a> </li>
                <li><a href="#h-2">When to issue</a> </li>
-               <li>                  <a href="#h-3">Before you fill out</a>                   </li>
+               <li>                  <a href="#h-3">What to report</a>                   </li>
                <li> <a href="#h-4">How to fill out</a></li>
             </ul>
 			 <h2 id="h-1">What is a T4A-RCA slip</h2>
@@ -176,7 +176,7 @@
 
            <p>Depending on the situation, you may also have to issue a T4A-RCA slip for amounts the RCA trust refunded to the employer or the employee.</p>
             
-            <h2 id="h-3">Before you fill out</h2>
+            <h2 id="h-3">What to report</h2>
               <details>  <summary >What to report and not report on a T4A-RCA</summary>        
           
             <div class="row">
