--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -159,7 +159,7 @@
                  
                </li>
                <li>
-                  <a href="#h-4">What to report</a>
+                  <a href="#h-4">How to fill out</a>
                   <ul>
                      <li><a href="#h-4-1">Identification and pre-numbered boxes</a> </li>
                      <li><a href="#h-4-2">"Other information" section</a>
