--- a/payroll/file/t4anrsum.html
+++ b/payroll/file/t4anrsum.html
@@ -152,7 +152,7 @@
 <ul>
 
 	       <li><a href="#h-1">What is a T4A-NR summary</a> </li>
-               <li><a href="#h-3">Before you fill out</a></li>
+               <li><a href="#h-3">What to report</a></li>
                <li><a href="#h-4">How to fill out</a></li>
             </ul>
 
@@ -180,7 +180,7 @@
 		 </div></div>
 
 
-<h2 id="h-3">Before you fill out</h2>
+<h2 id="h-3">What to report</h2>
   <ul class="fa-ul">
    <li><span class="fas fa-check text-success fa-li"></span>Report all amounts in Canadian dollars, even if they were paid in another currency. Learn more about the average exchange rates: <a href="http://www.bankofcanada.ca/rates/exchange/">Exchange rates</a> </li>
   <li><span class="fas fa-check text-success fa-li"></span> Fill out a separate T4A-NR summary for each of your payroll accounts. <strong>The totals you report on your T4A-NR summary have to agree with the totals of all amounts you reported on your T4A-NR slips</strong> for that payroll account</li>
@@ -209,7 +209,7 @@
 </details>
 
 <details><summary id="h_0_2">Payer's account number</summary>
-<p>Enter your <span class="nowrap">15-character</span> <a href="#account" aria-controls="centred-popup" class="wb-lbx" role="button">payroll account&nbsp;<span class="far fa-question-circle"></span></a> (for example, 123456789RP0001). </p>
+<p>Enter your <span class="nowrap">15-character</span> <a href="#account" aria-controls="centred-popup" class="wb-lbx" role="button">payroll account number&nbsp;<span class="far fa-question-circle"></span></a> (for example, 123456789RP0001). </p>
 </details>
 
 <details><summary id="h_0_3">Name and address of payer</summary>
@@ -233,7 +233,7 @@
 </details>
 
 <details><summary id="h_0_8">Line 82 &ndash; Remittances</summary>
-  <p>  Report the total amount of payroll deductions and contributions you remitted to the CRA for your payroll account. You can get this amount from your most recent PD7A.</p>
+  <p>  Report the total amount of income tax deductions you remitted to the CRA for your payroll account. You can get this amount from your most recent PD7A.</p>
     
  <p>Learn more: <a href="/cra-arc/payroll/file/receiving.html">Receiving payroll correspondence from us</a>  </p>
 </details>
@@ -246,7 +246,7 @@
  <li class="cnjnctn-col">the amount is <strong>positive</strong>, there is a balance due. Report the result on line 86.</li>
  <li class="cnjnctn-col">there is <strong>no difference</strong> between the total deductions you reported and the amount you remitted for the year, leave lines 84 and 86 blank.</li>
 </ul>
-<p>Generally, the CRA do not charge or refund a difference of $2 or less.</p>
+<p>Generally, the CRA does not charge or refund a difference of $2 or less.</p>
 </details>
 
 <details><summary id="h_0_10">Line 84 &ndash; Overpayment</summary>
