--- a/payroll/file/t5018slip.html
+++ b/payroll/file/t5018slip.html
@@ -149,7 +149,7 @@
 <ul>
 <li><a href="#h-1">What is a T5018 slip</a> </li>
 <li><a href="#h-2">When to issue</a></li>
-<li><a href="#h-3">Before you fill out</a></li>
+<li><a href="#h-3">What to report</a></li>
 <li><a href="#h-4">How to fill out</a> </li>
 </ul>
 
@@ -275,7 +275,7 @@
 </details>
 
 		 
-            <h2 id="h-3">Before you fill out</h2>
+            <h2 id="h-3">What to report</h2>
 
    <details>  <summary >What to report and not report on a T5018</summary>                   
 
