--- a/payroll/file/t5018sum.html
+++ b/payroll/file/t5018sum.html
@@ -152,7 +152,7 @@
 <ul>
 
 	       <li><a href="#h-1">What is a T5018 summary</a> </li>
-               <li><a href="#h-3">Before you fill out</a></li>
+               <li><a href="#h-3">What to report</a></li>
                <li><a href="#h-4">How to fill out</a></li>
             </ul>
 
@@ -181,7 +181,7 @@
 		 </div></div>
 
 
-<h2 id="h-3">Before you fill out</h2>
+<h2 id="h-3">What to report</h2>
   <ul class="fa-ul">
    <li><span class="fas fa-check text-success fa-li"></span>Report all amounts in Canadian dollars, even if they were paid in another currency. Learn more about the average exchange rates: <a href="http://www.bankofcanada.ca/rates/exchange/">Exchange rates</a> </li>
   <li><span class="fas fa-check text-success fa-li"></span> Fill out a separate T5018 summary for each of your payroll accounts. <strong>The totals you report on your T5018 summary have to agree with the totals of all amounts you reported on your T5018 slips</strong> for that payroll account</li>
