--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -333,7 +333,7 @@
 				<li class="box-num">  	
 
    <details>    <summary>Box 061 – Payer's program account number </summary>
-              <p id="bx061">Enter your <span class="nowrap">15-character</span> <a href="#account" aria-controls="centred-popup" class="wb-lbx" role="button">payroll account&nbsp;<span class="far fa-question-circle"></span></a> (for example, 123456789RP0001) on your copy and the copy you send to the CRA <strong>only</strong>.</p>
+              <p id="bx061">Enter your <span class="nowrap">15-character</span> <a href="#account" aria-controls="centred-popup" class="wb-lbx" role="button">payroll account number&nbsp;<span class="far fa-question-circle"></span></a> (for example, 123456789RP0001) on your copy and the copy you send to the CRA <strong>only</strong>.</p>
 <p><strong>Do not</strong> enter your payroll account on the copies you give to the recipients.</p>
                 </details>           
  </li>
