--- a/payroll/file/t4arcaslip.html
+++ b/payroll/file/t4arcaslip.html
@@ -303,7 +303,7 @@
 </details>
 
 <details><summary>Box 61 &ndash; Payroll account number </summary>
-<p>Enter the <span class="nowrap">15-character</span> <a href="#account" aria-controls="centred-popup" class="wb-lbx" role="button">payroll account&nbsp;<span class="far fa-question-circle"></span></a> (for example, 123456789RP0001) of the custodian or the person who bought an interest in the RCA. </p>
+<p>Enter the <span class="nowrap">15-character</span> <a href="#account" aria-controls="centred-popup" class="wb-lbx" role="button">payroll account number&nbsp;<span class="far fa-question-circle"></span></a> (for example, 123456789RP0001) of the custodian or the person who bought an interest in the RCA. </p>
 <p>The account number must be the same as your PD7A. </p>
 <p><strong>Do not</strong> enter the custodian's account number on the copies you give to the recipients.</p> 
  <p>Learn more: <a href="/cra-arc/payroll/file/receiving.html">Receiving payroll correspondence from us</a>  </p>	
