--- a/payroll/file/t4anrslip.html
+++ b/payroll/file/t4anrslip.html
@@ -2897,7 +2897,7 @@ Code and type of industry for the <span class="nowrap">non-resident</span>
                 <details>
                     <summary>Payer's account number</summary>
 
- <p>Enter your <span class="nowrap">15-character</span> <a href="#account" aria-controls="centred-popup" class="wb-lbx" role="button">payroll account&nbsp;<span class="far fa-question-circle"></span></a> (for example, 123456789RP0001) on your copy and the copy you send to the CRA <strong>only</strong>. </p>
+ <p>Enter your <span class="nowrap">15-character</span> <a href="#account" aria-controls="centred-popup" class="wb-lbx" role="button">payroll account number&nbsp;<span class="far fa-question-circle"></span></a> (for example, 123456789RP0001) on your copy and the copy you send to the CRA <strong>only</strong>. </p>
 <p><strong>Do not</strong> enter your payroll account on the copies you give to the recipients.</p> 
                   
          
