--- a/fhsa/participating.html
+++ b/fhsa/participating.html
@@ -358,6 +358,11 @@
         
     </ul>
 
+        <h2 id="h-6">Contributions during the first 60 days of the year</h2>
+	<p>Unlike RRSPs, contributions that you make to your FHSAs during the first 60 days of the year are <strong>not</strong> deductible on your previous year’s income tax and benefit return. You also cannot claim a tax deduction for any FHSA contributions that you make after your first <a href="#qualwith" aria-controls="qualwith" class="wb-lbx" role="button">qualifying withdrawal&nbsp;<span class="far fa-question-circle"></span></a>.</p>
+<p>For more information about tax deductions for your FHSA contributions, go to&nbsp;<a href="/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/tax-deductions-fhsa-contributions.html">Tax deductions for FHSA contributions</a>.</p>
+
+    
 
 
 </div>
