--- a/fhsa/transfers.html
+++ b/fhsa/transfers.html
@@ -86,9 +86,9 @@
 
 
             </ul>
-            <h2 id="h-1">How much you can contribute or transfer</h2>
+            <h2 id="h-1">How much you can transfer</h2>
 		 
-          <p>Your FHSA participation room for the year is the maximum amount&nbsp;that you can contribute to your FHSAs or transfer from your&nbsp;<a href="#rrsp" aria-controls="rrsp" class="wb-lbx" role="button">registered retirement savings plans (RRSPs)&nbsp;<span class="far fa-question-circle"></span></a>&nbsp;to your FHSAs in the year without creating an <a href="#excessfhsa" aria-controls="excessfhsa" class="wb-lbx" role="button">excess FHSA amount&nbsp;<span class="far fa-question-circle"></span></a>. For more information about transfers, go to <a href="/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/transferring-funds-between-fhsas-other-registered-plans.html">Transfers between FHSAs and other registered plans</a>.</p>
+          <p>Your FHSA participation room for the year is the maximum amount&nbsp;that you can contribute to your FHSAs or transfer from your&nbsp;<a href="#rrsp" aria-controls="rrsp" class="wb-lbx" role="button">registered retirement savings plans (RRSPs)&nbsp;<span class="far fa-question-circle"></span></a>&nbsp;to your FHSAs in the year without creating an <a href="#excessfhsa" aria-controls="excessfhsa" class="wb-lbx" role="button">excess FHSA amount&nbsp;<span class="far fa-question-circle"></span></a>. For more information about transfers, go to <a href="participating.html">Participating in your FHSAs</a>.</p>
 
     
 
