--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-2.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-2.html
@@ -140,6 +140,9 @@
 <p> This assistance may include: </p>
 <ul>
   <li>Provincial and territorial assistance (if not renounced in your province or territory)</li>
+	<ul>
+		<li>For detailed information, review <a href="https://canada-preview.adobecqms.net/en/revenue-agency/services/forms-publications/publications/t4088/guide-form-t661-scientific-research-experimental-development-expenditures-claim-guide-form-t661.html#ln429">Line 429, T4088 guide to SR&ED Expenditures Claim</a></li>
+	</ul>
 	  <li>Other government or non-government assistance</li>
   <li>Any SR&amp;ED investment tax credit (ITC) claimed the previous year (refunds, applied or carried back)</li>
   
