--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -599,18 +599,26 @@
  <li class="cnjnctn-col">The amount is more than&nbsp;$500</li>
  <li class="cnjnctn-col">You deducted income tax</li> 
 </ul>
-<p><strong>Do not</strong> report payments of fees for services using code 028, use <a href="#bx048">box 048</a>.</p>
-<h4>Situations where you may need to report amounts using code 028</h4>
-<ul>
-<li>You paid a premium or you made a contribution to a non-group plan (such as: sickness, accident, disability or income maintenance insurance plan), learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#disability">Insurance plans</a></li>
-<li>You paid daycare subsidies, learn more on taxable benefits: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/benefits-allowances/provided/child-care-expenses.html">Child care expenses</a></li>
-</ul>
+    <h4>Specific situations</h4>
+<dl class="dl-horizontal">
+<dt>Payment of fees for services</dt>
+<dd><strong>Do not</strong> report payments of fees for services using code 028, use <a href="#bx048">box 048</a>.</dd>
+
+<dt>Insurance plans</dt>
+<dd><p>Report amounts if you paid a premium or you made a contribution to a non-group plan (such as: sickness, accident, disability or income maintenance insurance plan) using code 028.</p>
+<p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#disability">Insurance plans</a></p></dd>
+
+<dt>Child care expenses</dt>
+<dd><p>Report amounts if you paid daycare subsidies using code 028.</p>
+<p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/child-expenses.html">Child care expenses</a></p></dd>
+</dl>
+
 </details> 
 </li>
 <li class="code-num">
  <details> <summary>Code 030 – Patronage allocations</summary> 
   <p id="cd030">Report all allocations you gave to customers for their patronage. This includes payments you made in cash or in kind, by certificate of indebtedness, issue of shares, <span class="nowrap">set-off,</span> assignment, or in any other way. Your allocations should be in proportion to the patronage.</p> 
-<p>Learn more on the tax treatement of payments other than regular employment: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/patronage-allowances.html">Patronage payments</a></p>	 
+<p>Learn more on the tax treatement of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/patronage.html">Patronage payments</a></p>	 
  
 </details> 
 </li>
