--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -616,8 +616,8 @@
 </details> 
 </li>
 <li class="code-num">
- <details> <summary>Code 030 – Patronage allocations</summary> 
-  <p id="cd030">Report all allocations you gave to customers for their patronage. This includes payments you made in cash or in kind, by certificate of indebtedness, issue of shares, <span class="nowrap">set-off,</span> assignment, or in any other way. Your allocations should be in proportion to the patronage.</p> 
+ <details> <summary>Code 030 – Patronage allocations <span class="label label-warning">Jeremiah</span></summary> 
+  <p id="cd030">Report patronage payments you made to customers for their patronage. </p>
 <p>Learn more on the tax treatement of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/patronage.html">Patronage payments</a></p>	 
  
 </details> 
