--- a/fhsa/transfers.html
+++ b/fhsa/transfers.html
@@ -290,7 +290,7 @@
 
 
 </div>
-        <h2 id="h-4">Transfers from your RRSPs to your FHSAs</h2>
+        <h2 id="h-4">Transfers between your FHSAs</h2>
 <p>A transfer from one of your FHSAs to another of your FHSAs can be made without any immediate tax consequences, as long as it is a direct transfer. For more information on how to complete a direct transfer, go to&nbsp;<a href="#h_2">What&nbsp;is a direct transfer</a>.</p>
 <p>To complete a <strong>direct</strong> transfer between your FHSAs, you must fill out a transfer form and give it to your financial institution.&nbsp;<span class="label label-info">This form will be available at a later date.</span></p>
 <p>If you make a direct transfer between your FHSAs, the transfer will <strong>not</strong> reduce your unused FHSA participation room.</p>
